@@ -1,3 +1,8 @@
+Mon Oct 16 01:12:36 CEST 2006 (tk)
+----------------------------------
+  * libclamav/readdb.c: use different field order for .mdb files
+			(requested by signature maintainers)
+
 Sun Oct 15 21:15:58 CEST 2006 (tk)
 ----------------------------------
   * libclamav: allow loading multiple .pdb/.wdb files (Edwin)
